# dotto-cpp

./: CMakeLists.txt  LICENSE  README.md
include/: board.h  cell.h  enums.h  game.h  globals.h  other_tools.h  piece.h  player.h  portal.h  random.h  settings_data.h  transparent.h  validation_tools.h
maps/: Breakout.csv
src/: CMakeLists.txt  board.cpp  cell.cpp  enums.cpp  game.cpp  globals.cpp  main.cpp  other_tools.cpp  piece.cpp  player.cpp  random.cpp  settings_data.cpp  validation_tools.cpp
